--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,6 @@
 == README
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
+Stardate 08/25/2016 This is the initial voyage of the AhoyAndDevise project to boldy go where I haven't gone before.
+More descriptively, I've been working on Rails for the past 3 weeks and I'm at the point of wanting to venture out past the core functionality to see where this thing can go. I had wanted to implement some of the more common features of websites (such as timed out authentication, password resets, captchas, and probably more that I can't think of at the moment), so, here's a test tube baby to get that ball rolling.
 
 
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
